spacing in info of first accomodation and search button border error corrected

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -140,7 +140,7 @@ input:focus {
 
 .searchbutton {
   color: white;
-  border: 2px solid #0065FC;
+  border: none;
   background-color: #0065FC;
   outline: none;
   align-content: center;
